add item swagger
